vke-seoul/ns-mastodon/50-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: mastodon
  labels:
    app: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: mastodon
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: tootsuite/mastodon:v3.5.3
          name: web
          command: ["bash"]
          args: ["-c", "bundle exec rails db:migrate && bundle exec rails s -p 3000"]
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m
          ports:
            - containerPort: 3000
              name: web-port
          startupProbe:
            httpGet:
              path: /health
              port: web-port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: web-port
            failureThreshold: 2
            periodSeconds: 60
