vke-seoul/ns-mastodon/51-streaming.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: streaming
  namespace: mastodon
  labels:
    app: streaming
spec:
  type: NodePort
  selector:
    app: streaming
  ports:
    - port: 4000
      targetPort: 4000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming
  namespace: mastodon
  labels:
    app: streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streaming
  template:
    metadata:
      labels:
        app: streaming
    spec:
      containers:
        - image: tootsuite/mastodon:v3.5.3
          name: streaming
          command: ["node"]
          args: ["./streaming"]
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            - containerPort: 4000
              name: streaming-port
          startupProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming-port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming-port
            failureThreshold: 2
            periodSeconds: 60
