vke-seoul/ns-mastodon/10-ingress.yaml
---
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: web
  namespace: mastodon
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - mstdn.dhlyn.me
      secretName: mastodon-certs
  rules:
    - host: mstdn.dhlyn.me
      http:
        paths:
          - path: /api/v1/streaming
            pathType: Prefix
            backend:
              service:
                name: streaming
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
